--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,7 @@ video {
     text-align: center;
     backdrop-filter: blur(5px);
     background-color:rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);
 }
 .subheading{font-size: 6vw;}
 .subheading2{font-size: 4vw; margin:0em 0em 0em 0em}
@@ -78,27 +79,28 @@ video {
     font-size: 3.6vw;
     border: none;
     border-radius: 0.5em;
+    box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);
 }
 .button2{
     font-family: "poppins"; 
     width: 15vw;
     height: 5vw;
-    background-color:rgba(0, 0, 0, 0.55); 
+    background-color:rgba(0, 0, 0, 0.35); 
     color:white; 
     z-index:999;
     backdrop-filter: blur(5px);
     font-size: 2.6vw;
     border: none;
     border-radius: 0.3em;
+    box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);
 }
 .button1:hover,.button2:hover{
     background-color:rgba(30, 30, 30, 0.40); 
     transition: 0.2s;
 }
 .button1:disabled,.button2:disabled{
-    color:grey; 
-    background-color:rgba(30, 30, 30, 0.20); 
-    transition: 0.2s;
+    color:rgb(58, 58, 58); 
+    background-color:rgba(53, 53, 53, 0.308);
 }
 .form{    min-height: 60vh;}
 .pad-10pct{padding: 0 10vw 0 10vw;}
@@ -113,10 +115,18 @@ video {
     margin-right: 0.9em;}*/
 input[type="text"]{
     font-family: "poppins"; 
-    max-width: auto;
-    font-size: 2.6vw;
+    font-size: 3.6vw;
     padding: 0.3em 0.6em 0.3em 0.6em;
+    box-shadow: inset 0 0px 5px rgb(0 0 0 / 0.4);
+    border: none;
+    border-radius: 0.3em;
+    background-color:rgba(0, 0, 0, 0.35);
+    color:white;
 }
+input[type="text"]:disabled {background-color:rgba(97, 97, 97, 0.523);}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+  }
 input[type="range"]{
     accent-color: #27877d;
 }
@@ -132,7 +142,7 @@ output{
     padding: 0.3em 0.7em 0.3em 0.7em;
 }
 .small-option{
-    font-size: 2.6vw;
+    font-size: 3.2vw;
     padding: 0.2em 0.5em 0.2em 0.5em;
 }
 .td-right{text-align: right;}
@@ -148,16 +158,12 @@ p{margin:0}
 td p, td strong, .game-details p{
     font-size: 2.6vw;
 }
+td strong{    padding: 0.2em 0.5em 0.2em 0.5em;}
 .lobby{
-    background-color: turquoise;
-/* background-image: linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
-linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
-linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
-linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
-linear-gradient(60deg, rgb(80, 80, 241) 25%, transparent 25.5%, transparent 75%, rgb(80, 80, 241) 75%, rgb(80, 80, 241)),
-linear-gradient(60deg, rgb(80, 80, 241) 25%, transparent 25.5%, transparent 75%, rgb(80, 80, 241) 75%, rgb(80, 80, 241));
-background-size:80px 140px;
-background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px; */
+    background-color: rgb(73, 255, 237);
+    background-image: linear-gradient(to bottom, rgb(0, 240, 216), rgb(46, 162, 151));
+    background-attachment:fixed;
+
     flex:1;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -174,17 +180,23 @@ table, th, td, tr {
 }
 .border{ border:  solid rgba(0, 0, 0, 0.20) 1px}
 .vmar{margin:0.8em 0em 0.8em 0em}
-.vmar{margin:0.8em 0em 0.8em 0em}
+.vmar-tiny{margin:0.2em 0em 0.2em 0em}
 .vmar2{margin:2em 0em 2em 0em}
 .pad-lr{padding:0em 0.4em 0em 0.4em}
 .slight-v-gradient{
-    background-image: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.06));
+    background-image: linear-gradient(rgba(255, 255, 255, 0.07),rgba(255, 255, 255, 0.17));
 }
-.name_input{width: 30em;}
+.name_input{width: 21em !important }
 .invisible{visibility:hidden}
 .name_big{font-size:8vw}
-.myturn-background{background-color:rgb(251, 62, 62)}
-.myteam-background{background-color:rgb(251, 210, 62)}
+.myturn-background{
+    background-color:rgb(251, 62, 62);
+    background-image: linear-gradient(to bottom, rgb(251, 62, 62), rgb(192, 45, 45));
+}
+.myteam-background{
+    background-color:rgb(251, 207, 62);
+    background-image: linear-gradient(to bottom, rgb(251, 210, 62), #ffb100); 
+}
 .white{color:rgb(255, 255, 255)}
 
 
@@ -196,11 +208,31 @@ table, th, td, tr {
 /*toggle switch*/
 .switch { margin: 0em 0.6em 2px 4px; position: relative; display: inline-block; width: 45px; height: 26px; }
 .switch input { opacity: 0; width: 0; height: 0; }
-.slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; -webkit-transition: .4s; transition: .4s; border-radius: 2px; }
+.slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(72, 72, 72, 0.676); -webkit-transition: .4s; transition: .4s; border-radius: 2px; 
+    box-shadow: inset 0 3px 10px rgb(0 0 0 / 0.3);}
 .slider:before { position: absolute; content: ""; height: 18px; width: 18px; left: 4px; bottom: 4px; background-color: white; -webkit-transition: .4s; transition: .4s; border-radius: 2px;}
-input:checked + .slider { background-color: #27877d; }
+input:checked + .slider { background-color: rgba(0, 0, 0, 0.2) }
 input:focus + .slider { box-shadow: 0 0 1px linear-gradient(to bottom right, #e0e0e0, #F7F7F7); }
 input:checked + .slider:before { -webkit-transform: translateX(19px); -ms-transform: translateX(19px); transform: translateX(19px); }
+
+/* background-image: linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
+linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
+linear-gradient(30deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
+linear-gradient(150deg, rgb(214, 174, 196) 12%, transparent 12.5%, transparent 87%, rgb(214, 174, 196) 87.5%, rgb(214, 174, 196)),
+linear-gradient(60deg, rgb(80, 80, 241) 25%, transparent 25.5%, transparent 75%, rgb(80, 80, 241) 75%, rgb(80, 80, 241)),
+linear-gradient(60deg, rgb(80, 80, 241) 25%, transparent 25.5%, transparent 75%, rgb(80, 80, 241) 75%, rgb(80, 80, 241));
+background-size:80px 140px;
+background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px; */
+
+
+/* background-image: linear-gradient(30deg, #ffb100 12%, transparent 12.5%, transparent 87%, #ffb100 87.5%, #ffb100),
+linear-gradient(150deg, #ffb100 12%, transparent 12.5%, transparent 87%, #ffb100 87.5%, #ffb100),
+linear-gradient(30deg, #ffb100 12%, transparent 12.5%, transparent 87%, #ffb100 87.5%, #ffb100),
+linear-gradient(150deg, #ffb100 12%, transparent 12.5%, transparent 87%, #ffb100 87.5%, #ffb100),
+linear-gradient(60deg, rgb(241, 220, 80) 25%, transparent 25.5%, transparent 75%, rgb(241, 220, 80) 75%, rgb(241, 220, 80)),
+linear-gradient(60deg, rgb(241, 220, 80) 25%, transparent 25.5%, transparent 75%, rgb(241, 220, 80) 75%, rgb(241, 220, 80));
+background-size:80px 140px;
+background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px; */
 
 
 /*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
