--- a/templates/join-game.html
+++ b/templates/join-game.html
@@ -15,7 +15,7 @@
                 <h1 class="heading subheading2">SELECT A GAME</h1>
                 <div class="text-box" id="games">
                 {% for id, name in games %}
-                    <div class="option" onclick="option_select(this)" id="option{{id}}">
+                    <div class="option slight-v-gradient" onclick="option_select(this)" id="option{{id}}">
                         <input type="hidden" value="{{id}}">
                         {{name}}
                     </div>
@@ -29,7 +29,7 @@
         </div>
         <div class="flex-h mar-1em">
             <button class="button1" onclick="location.href='join_game';">Refresh</button>
-            <button class="button1" onclick="location.href='/';">Home</button>
+            <button class="button1" onclick="home()">Home</button>
         </div>
     </body>
     <script>
@@ -66,6 +66,11 @@
                 }
             }
         }
+        function home(){
+            socket.disconnect()
+            location.href='/';
+        }
+
     </script>
 </html>
         
